# ComfyUI_Fictiverse

./: FV_IfImageValid.py  FV_SaveSimpleJPG.py  README.md  __init__.py  install.bat  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: FV_AddMarginWithColor.py  FV_AnyToIntFloatString.py  FV_AudioDuration.py  FV_CameraCrafter.py  FV_CharacterCrafter.py  FV_ClampImagesToMegapixels.py  FV_CleanStyleFromCaption.py  FV_ColorCorrection.py  FV_EssentialParams.py  FV_GetImageHalfSize.py  FV_GetLastOutputVideoPath.py  FV_IfImageValid.py  FV_ImageParams.py  FV_IsValid.py  FV_LoRA_Enable_With_Prefix.py  FV_LoadSaveImagePassPrompt.py  FV_MathOperation.py  FV_NodeGroup_1.py  FV_NoneIfSameImage.py  FV_PromptAssembler.py  FV_ResizeImagesToMegapixels.py  FV_ResizeToMegapixels.py  FV_SaveSimpleJPG.py  FV_ScaleSelector.py  FV_Text_Enable_With_Prefix.py  FV_VideoParams.py  FV_WaveformDevice.py
