[project]
name = "comfyui_fictiverse"
description = "Nodes:Scale Selector, If Image Valid"
version = "1.0.0"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/Fictiverse/ComfyUI_Fictiverse"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Fictiverse"
Icon = ""
