[project]
name = "comfyui_fictiverse"
description = "Nodes:Essential Params, Image Params, Video Params, Add Margin With Color, Resize to megapixels"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Fictiverse/ComfyUI_Fictiverse"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Fictiverse"
DisplayName = "ComfyUI Fictiverse Nodes"
Icon = ""
